Redo skills and bold resume

--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -141,18 +141,18 @@
       \resumeItemListStart
         % \resumeItem{Developed web, and mobile applications with React, React Native, and PostgreSQL that power the COVID-19 vaccination campaigns in Nova Scotia and Yukon.}
         \resumeItem{Built web and mobile applications that power the COVID-19 vaccination campaigns in Nova Scotia and Yukon.}
-        \resumeItem{Developed user interfaces used by 1M+ people across different projects with Typescript, React, CSS, and Redux. }
-        \resumeItem{Designed serverless services that allows residents of Nova Scotia to access their vaccinaton records using Serverless, Redis and Twilio.}
-        \resumeItem{Migrated and expanded CI/CD pipelines from Jenkins to CircleCI; sharply decreased the deployment process duration by 80\%, from an average of 1 hour down to 12 minutes.}
-        \resumeItem{Ported a large legacy codebase from Node.js v9 to v18; enabled the resumption of its development.}
-        \resumeItem{Set up service health monitoring dashboards with CloudWatch and integrated them with Slack; helped halve service incidents and reach 99.98\% uptime.}
+        \resumeItem{Developed user interfaces used by 1M+ people across different projects with \textbf{Typescript}, \textbf{React}, \textbf{CSS}, and Redux. }
+        \resumeItem{Designed serverless services that allows residents of Nova Scotia to access their vaccinaton records using Serverless, Lambda, \textbf{Redis} and Twilio.}
+        \resumeItem{Migrated and expanded \textbf{CI/CD} pipelines from Jenkins to \textbf{CircleCI}; sharply decreased the deployment process duration by 80\%, from an average of 1 hour down to 12 minutes.}
+        \resumeItem{Ported a large legacy codebase from \textbf{Node.js} v9 to v18; enabled the resumption of its development.}
+        \resumeItem{Set up service health monitoring dashboards with \textbf{CloudWatch} and integrated them with Slack; helped halve service incidents and reach 99.98\% uptime.}
         % \resumeItem{Developed a web and mobile app using React, React Native, and Typescript that provide 1M+ people access to their vaccination records.}
-        \resumeItem{Wrote hundreds of unit and integration tests with Jest; maintained branch coverage above 80\%.}
+        \resumeItem{Wrote hundreds of \textbf{unit and integration tests} with Jest; maintained branch coverage above 80\%.}
         \resumeItem{Built a SasS product with 150K+ users that helps employers manage their immunization policies.}
         % \resumeItem{Built a Sass product with 150K+ users that helps employers manage their immunization policies using React, Node.js, AWS and PostgreSQL.}
-        \resumeItem{Created Terraform templates to manage the infrastructure of many projects.}
+        \resumeItem{Created \textbf{Terraform} templates to manage the infrastructure of many projects hosted on \textbf{AWS}.}
         \resumeItem{Maintained a public repository of vaccine products and lots made available as an npm package, web app, and REST FHIR API with 100K+ records.}
-        \resumeItem{Headed data migrations of millions of medical records with PostgreSQL and Typeorm.}
+        \resumeItem{Headed data migrations of millions of medical records with \textbf{PostgreSQL} and Typeorm.}
         % \resumeItem{Achieved SOC 2 compliance by integrating Snyk SAST.}
         \resumeItem{Participated in recruitment events, conducted technical interviews and onboarded co-op students.}
         % \resumeItem{Reviewed pull requests daily and mentored junior developers.}
@@ -163,7 +163,7 @@
       {Freelance Lead Developer}{Feb 2020 -- May 2020}
       {ppeburnrate.com}{Oakville, Ontario}
       \resumeItemListStart
-        \resumeItem{Recruited and led a team of 5 developers in building a responsive web app that helps organizations manage their PPE consumption using React, ExpressJS, DigitalOcean and Microsoft SQL Server.}
+        \resumeItem{Recruited and led a team of 5 developers in building a responsive web app that helps organizations manage their PPE consumption using \textbf{React}, Tailwind, Express.js and \textbf{PostgreSQL}.}
       \resumeItemListEnd
     % \resumeSubheading
     %   {Shipping \& Receiving Associate}{Apr 2019 -- Sep 2020}
@@ -196,7 +196,7 @@
       \resumeProjectHeading
           {\textbf{Coco} $|$ \emph{JavaScript, Tera, Sass, HTML, GitHub Actions}}{June 2024 -- Present}
           \resumeItemListStart
-            \resumeItem{Created a minimalistic Zola theme originally for my personal website, now freely available.}
+            \resumeItem{Created a minimalistic Zola theme originally for my personal website, now available for free.}
           \resumeItemListEnd
       % \resumeProjectHeading
       %     {\textbf{Camila} $|$ \emph{C++, OpenGL, GLFW, glad, glm, assimp}}{May 2024 -- Present}
@@ -215,13 +215,18 @@
   \section{Skills}
   \begin{itemize}[leftmargin=0.15in, label={}]
       \small{\item{
-      \textbf{Languages}{: Typescript, SQL, JavaScript, HTML, CSS.} \\
+      \textbf{Languages}{: Typescript, JavaScript, CSS/SCSS/HTML, SQL.} \\
+      \textbf{Frameworks and libraries}{: React, React Native, Jest, Express.js, Fastify.} \\
+      \textbf{Infrastructure}{: AWS(EC2, Lambda, RDS, CloudWatch), Serverless, Redis, Terraform.} \\
+      \textbf{DevOps}{: Jenkins, CircleCI, Github Actions, Docker.} \\
+      \textbf{Others}{: Node.js, Typeorm, Git, Tailwind, Webpack, Vite.} \\
+      % \textbf{Languages}{: Typescript, JavaScript, SQL, HTML, CSS.} \\
       % \textbf{Languages}{: Typescript, C++, SQL, Postgres, JavaScript, HTML, CSS.} \\
-      \textbf{Frameworks}{: React, React Native, ExpressJS, Jest, Fastify.} \\
-      \textbf{Tools}{: CircleCI, GitHub Actions, Git.} \\
-      \textbf{Infrastructure}{: AWS, Terraform, Firebase.} \\
-      \textbf{Others}{: Node.js, Redis, Docker, Typeorm, Tailwind.} \\
+      % \textbf{Frameworks}{: React, React Native, Jest, Express.js, Fastify.} \\
+      % \textbf{DevOps}{: AWS, Serverless, Terraform, Firebase, CircleCI, GitHub Actions.} \\
+      % \textbf{Others}{: Node.js, Redis, Docker, Typeorm, Tailwind, Webpack, Vite.} \\
       % \textbf{Libraries \& Others}{: Node.js, OpenGL, Dear ImGui, Ant Design, Tailwind, Redis, Docker.} \\
+      % \textbf{Tools}{: Redis, Docker, Typeorm, Git, Tailwind, Webpack, Vite.} \\
       }}
   \end{itemize}
 \end{minipage}\hspace{.02\textwidth}%
