--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -142,7 +142,7 @@
         % \resumeItem{Developed web, and mobile applications with React, React Native, and PostgreSQL that power the COVID-19 vaccination campaigns in Nova Scotia and Yukon.}
         \resumeItem{Built web and mobile applications that power the COVID-19 vaccination campaigns in Nova Scotia and Yukon.}
         \resumeItem{Developed user interfaces used by 1M+ people across different projects with \textbf{Typescript}, \textbf{React}, \textbf{CSS}, and Redux. }
-        \resumeItem{Designed serverless services that allows residents of Nova Scotia to access their vaccinaton records using Serverless, Lambda, \textbf{Redis} and Twilio.}
+        \resumeItem{Designed serverless services that allow residents of Nova Scotia to access their vaccination records using Serverless, Lambda, \textbf{Redis} and Twilio.}
         \resumeItem{Migrated and expanded \textbf{CI/CD} pipelines from Jenkins to \textbf{CircleCI}; sharply decreased the deployment process duration by 80\%, from an average of 1 hour down to 12 minutes.}
         \resumeItem{Ported a large legacy codebase from \textbf{Node.js} v9 to v18; enabled the resumption of its development.}
         \resumeItem{Set up service health monitoring dashboards with \textbf{CloudWatch} and integrated them with Slack; helped halve service incidents and reach 99.98\% uptime.}
@@ -196,7 +196,7 @@
       \resumeProjectHeading
           {\textbf{Coco} $|$ \emph{JavaScript, Tera, Sass, HTML, GitHub Actions}}{June 2024 -- Present}
           \resumeItemListStart
-            \resumeItem{Created a minimalistic Zola theme originally for my personal website, now available for free.}
+            \resumeItem{Created a minimalistic Zola theme for my personal website, now available for free.}
           \resumeItemListEnd
       % \resumeProjectHeading
       %     {\textbf{Camila} $|$ \emph{C++, OpenGL, GLFW, glad, glm, assimp}}{May 2024 -- Present}
@@ -218,7 +218,7 @@
       \textbf{Languages}{: Typescript, JavaScript, CSS/SCSS/HTML, SQL.} \\
       \textbf{Frameworks and libraries}{: React, React Native, Jest, Express.js, Fastify.} \\
       \textbf{Infrastructure}{: AWS(EC2, Lambda, RDS, CloudWatch), Serverless, Redis, Terraform.} \\
-      \textbf{DevOps}{: Jenkins, CircleCI, Github Actions, Docker.} \\
+      \textbf{DevOps}{: Jenkins, CircleCI, GitHub Actions, Docker.} \\
       \textbf{Others}{: Node.js, Typeorm, Git, Tailwind, Webpack, Vite.} \\
       % \textbf{Languages}{: Typescript, JavaScript, SQL, HTML, CSS.} \\
       % \textbf{Languages}{: Typescript, C++, SQL, Postgres, JavaScript, HTML, CSS.} \\
