Add Hacker News project

--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -144,7 +144,7 @@
         \resumeItem{Developed user interfaces used by 1M+ people across different projects with \textbf{Typescript}, \textbf{React}, \textbf{CSS}, and Redux. }
         \resumeItem{Designed serverless services that allow residents of Nova Scotia to access their vaccination records using Serverless, Lambda, \textbf{Redis} and Twilio.}
         \resumeItem{Migrated and expanded \textbf{CI/CD} pipelines from Jenkins to \textbf{CircleCI}; sharply decreased the deployment process duration by 80\%, from an average of 1 hour down to 12 minutes.}
-        \resumeItem{Ported a large legacy codebase from \textbf{Node.js} v9 to v18; enabled the resumption of its development.}
+        % \resumeItem{Ported a large legacy codebase from \textbf{Node.js} v9 to v18; enabled the resumption of its development.}
         \resumeItem{Set up service health monitoring dashboards with \textbf{CloudWatch} and integrated them with Slack; helped halve service incidents and reach 99.98\% uptime.}
         % \resumeItem{Developed a web and mobile app using React, React Native, and Typescript that provide 1M+ people access to their vaccination records.}
         \resumeItem{Wrote hundreds of \textbf{unit and integration tests} with Jest; maintained branch coverage above 80\%.}
@@ -181,6 +181,7 @@
       {Ontario College Diploma in Software Engineering}{Oakville, Ontario}
       \resumeItemListStart
         \resumeItem{GPA: 3.93/4.00; High Honours.}
+        \resumeItem{Prominent coursework: .NET Technologies, Web Programming, Database Design \& Implementation.}
       \resumeItemListEnd
     % \resumeSubheading
     %   {The Web Developer Bootcamp}{Jun 2019 -- Aug 2019}
@@ -194,10 +195,15 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Coco} $|$ \emph{JavaScript, Tera, Sass, HTML, GitHub Actions}}{June 2024 -- Present}
+          {\textbf{Hacker News Client} $|$ \emph{C\#, .NET Core, Razor Pages, Azure, GitHub Actions}}{July 2024 -- Present}
           \resumeItemListStart
-            \resumeItem{Created a minimalistic Zola theme for my personal website, now available for free.}
+            \resumeItem{Created a minimalistic Hacker News client using Steph Ango's Flexoki theme.}
           \resumeItemListEnd
+      % \resumeProjectHeading
+      %     {\textbf{Coco} $|$ \emph{JavaScript, Tera, Sass, HTML, GitHub Actions}}{June 2024 -- Present}
+      %     \resumeItemListStart
+      %       \resumeItem{Created a minimalistic Zola theme for my personal website, now available for free.}
+      %     \resumeItemListEnd
       % \resumeProjectHeading
       %     {\textbf{Camila} $|$ \emph{C++, OpenGL, GLFW, glad, glm, assimp}}{May 2024 -- Present}
       %     \resumeItemListStart
@@ -215,11 +221,11 @@
   \section{Skills}
   \begin{itemize}[leftmargin=0.15in, label={}]
       \small{\item{
-      \textbf{Languages}{: Typescript, JavaScript, CSS/SCSS/HTML, SQL.} \\
-      \textbf{Frameworks and libraries}{: React, React Native, Jest, Express.js, Fastify.} \\
-      \textbf{Infrastructure}{: AWS(EC2, Lambda, RDS, CloudWatch), Serverless, Redis, Terraform.} \\
+      \textbf{Languages}{: Typescript, C\#, C++, CSS/SCSS/HTML, SQL.} \\
+      \textbf{Frameworks and libraries}{: React, Razor Pages, Express.js.} \\
+      \textbf{Infrastructure}{: AWS (EC2, Lambda, RDS, CloudWatch), Azure (App Service) Redis, Terraform.} \\
       \textbf{DevOps}{: Jenkins, CircleCI, GitHub Actions, Docker.} \\
-      \textbf{Others}{: Node.js, Typeorm, Git, Tailwind, Webpack, Vite.} \\
+      \textbf{Others}{: Node.js, ASP.NET Core, Typeorm, Git, Tailwind, Webpack, Vite.} \\
       % \textbf{Languages}{: Typescript, JavaScript, SQL, HTML, CSS.} \\
       % \textbf{Languages}{: Typescript, C++, SQL, Postgres, JavaScript, HTML, CSS.} \\
       % \textbf{Frameworks}{: React, React Native, Jest, Express.js, Fastify.} \\
