Add link to the hacker news client

--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -195,7 +195,7 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Hacker News Client} $|$ \emph{C\#, .NET Core, Razor Pages, Azure, GitHub Actions}}{July 2024 -- Present}
+          {\textbf{\href{https://github.com/es-romo/HackerNews}{Hacker News Client}} $|$ \emph{C\#, .NET Core, Razor Pages, Azure, GitHub Actions}}{July 2024 -- Present}
           \resumeItemListStart
             \resumeItem{Created a minimalistic Hacker News client using Steph Ango's Flexoki theme.}
           \resumeItemListEnd
