--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -130,31 +130,64 @@
     % \small +1-437-344-0898
 \end{center}
 
+
+%-----------SKILLS-----------
+\begin{minipage}[t]{.78\textwidth}
+  \section{Skills}
+  \begin{itemize}[leftmargin=0.15in, label={}]
+      \small{\item{
+      \textbf{Languages}{: C\#, Typescript, C++, CSS/SCSS.} \\
+      \textbf{Frameworks \& runtimes}{: .NET Core, Razor Pages, EF Core, TypeORM, Node.js, React.} \\
+      \textbf{Infrastructure}{: Azure, Redis, AWS, Terraform.} \\
+      \textbf{Others}{: Microsoft SQL Server, Docker, GitHub Actions.} \\
+      % \textbf{Languages}{: Typescript, JavaScript, SQL, HTML, CSS.} \\
+      % \textbf{Languages}{: Typescript, C++, SQL, Postgres, JavaScript, HTML, CSS.} \\
+      % \textbf{Frameworks}{: React, React Native, Jest, Express.js, Fastify.} \\
+      % \textbf{DevOps}{: AWS, Serverless, Terraform, Firebase, CircleCI, GitHub Actions.} \\
+      % \textbf{Others}{: Node.js, Redis, Docker, Typeorm, Tailwind, Webpack, Vite.} \\
+      % \textbf{Libraries \& Others}{: Node.js, OpenGL, Dear ImGui, Ant Design, Tailwind, Redis, Docker.} \\
+      % \textbf{Tools}{: Redis, Docker, Typeorm, Git, Tailwind, Webpack, Vite.} \\
+      }}
+  \end{itemize}
+\end{minipage}\hspace{.02\textwidth}%
+%-----------Languages-----------
+\begin{minipage}[t]{.20\textwidth}
+  \section{Languages}
+  \begin{itemize}[leftmargin=0.0in, label={}]
+      \small{\item{
+      \textbf{English}{: Fluent} \\
+      \textbf{Spanish}{: Fluent} \\
+      }}
+  \end{itemize}
+\end{minipage}\vspace{-10pt}
+
 %-----------WORK EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheadingSmall
-    {Medical Treatment \& Recovery}{Dec 2023 -- May 2024}
+    {Medical Treatment and Recovery}{Dec 2023 -- May 2024}
     \resumeSubheading
       {Full Stack Software Engineer}{Apr 2021 -- Nov 2023}
       {CANImmunize}{Remote}
       \resumeItemListStart
         % \resumeItem{Developed web, and mobile applications with React, React Native, and PostgreSQL that power the COVID-19 vaccination campaigns in Nova Scotia and Yukon.}
-        \resumeItem{Built web and mobile applications that power the COVID-19 vaccination campaigns in Nova Scotia and Yukon.}
-        \resumeItem{Developed user interfaces used by 1M+ people across different projects with \textbf{Typescript}, \textbf{React}, \textbf{CSS}, and Redux. }
-        \resumeItem{Designed serverless services that allow residents of Nova Scotia to access their vaccination records using Serverless, Lambda, \textbf{Redis} and Twilio.}
-        \resumeItem{Migrated and expanded \textbf{CI/CD} pipelines from Jenkins to \textbf{CircleCI}; sharply decreased the deployment process duration by 80\%, from an average of 1 hour down to 12 minutes.}
-        % \resumeItem{Ported a large legacy codebase from \textbf{Node.js} v9 to v18; enabled the resumption of its development.}
-        \resumeItem{Set up service health monitoring dashboards with \textbf{CloudWatch} and integrated them with Slack; helped halve service incidents and reach 99.98\% uptime.}
-        % \resumeItem{Developed a web and mobile app using React, React Native, and Typescript that provide 1M+ people access to their vaccination records.}
+        \resumeItem{Built \textbf{web and mobile applications} that power the COVID-19 vaccination campaigns in Nova Scotia and Yukon.}
+        \resumeItem{Developed user interfaces used by 1M+ people with \textbf{Typescript}, \textbf{React}, \textbf{CSS}, and \textbf{Redux}. }
         \resumeItem{Wrote hundreds of \textbf{unit and integration tests} with Jest; maintained branch coverage above 80\%.}
-        \resumeItem{Built a SasS product with 150K+ users that helps employers manage their immunization policies.}
+        \resumeItem{Created a React library that simplifies form generation; sped up \textbf{front-end development}.}
+        \resumeItem{Increased performance of a web app by \textbf{reducing bundle size} tenfold with webpack.}
+        % \resumeItem{Designed serverless services that allow residents of Nova Scotia to access their vaccination records using Serverless, Lambda, Redis and Twilio.}
+        % \resumeItem{Ported a large legacy codebase from \textbf{Node.js} v9 to v18; enabled the resumption of its development.}
+        % \resumeItem{Developed a web and mobile app using React, React Native, and Typescript that provide 1M+ people access to their vaccination records.}
         % \resumeItem{Built a Sass product with 150K+ users that helps employers manage their immunization policies using React, Node.js, AWS and PostgreSQL.}
-        \resumeItem{Created \textbf{Terraform} templates to manage the infrastructure of many projects hosted on \textbf{AWS}.}
-        \resumeItem{Maintained a public repository of vaccine products and lots made available as an npm package, web app, and REST FHIR API with 100K+ records.}
-        \resumeItem{Headed data migrations of millions of medical records with \textbf{PostgreSQL} and Typeorm.}
+        \resumeItem{Maintained a public repository of vaccine products and lots made available as an npm package, \textbf{web app}, and \textbf{REST FHIR API} with 100K+ records.}
+        \resumeItem{Headed data migrations of millions of medical records with \textbf{PostgreSQL} and \textbf{TypeORM}.}
+        \resumeItem{Created Terraform templates to manage the infrastructure of many projects hosted on \textbf{AWS}.}
+        \resumeItem{Built a SaaS product with 150K+ users that helps employers manage their immunization policies.}
+        \resumeItem{Migrated and expanded CI/CD pipelines from Jenkins to CircleCI; sharply decreased the deployment process duration by 80\%, from an average of ~1 hour down to 12 minutes.}
+        \resumeItem{Set up service health monitoring dashboards with CloudWatch and integrated them with Slack; helped halve service incidents and reach 99.98\% uptime.}
+        % \resumeItem{Participated in recruitment events, conducted technical interviews and onboarded co-op students.}
         % \resumeItem{Achieved SOC 2 compliance by integrating Snyk SAST.}
-        \resumeItem{Participated in recruitment events, conducted technical interviews and onboarded co-op students.}
         % \resumeItem{Reviewed pull requests daily and mentored junior developers.}
         % \resumeItem{Diagnosed, mitigated and solved critical incidents as the on-call engineer.}
         % \resumeItem{Headed bi-weekly deployments that involved major data and infrastructure migrations.}
@@ -163,7 +196,7 @@
       {Freelance Lead Developer}{Feb 2020 -- May 2020}
       {ppeburnrate.com}{Oakville, Ontario}
       \resumeItemListStart
-        \resumeItem{Recruited and led a team of 5 developers in building a responsive web app that helps organizations manage their PPE consumption using \textbf{React}, Tailwind, Express.js and \textbf{PostgreSQL}.}
+        \resumeItem{Recruited and led a team of 5 developers in building a responsive web app that helps organizations manage their PPE consumption using React, Express.js and \textbf{Microsoft SQL Server}.}
       \resumeItemListEnd
     % \resumeSubheading
     %   {Shipping \& Receiving Associate}{Apr 2019 -- Sep 2020}
@@ -187,7 +220,7 @@
     %   {The Web Developer Bootcamp}{Jun 2019 -- Aug 2019}
     %   {Online Certificate}{udemy.com}
     \resumeSubheading
-      {Centro de Enseñanza Técnica Industrial}{Aug 2015 -- Jun 2019}
+      {Technical and Industrial Education Center}{Aug 2015 -- Jun 2019}
       {Technologist in Software Development}{Guadalajara, Mexico}
   \resumeSubHeadingListEnd
 
@@ -195,57 +228,26 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/es-romo/HackerNews}{Hacker News Client}} $|$ \emph{C\#, .NET Core, Razor Pages, Azure, GitHub Actions}}{July 2024 -- Present}
+          {\textbf{Hacker News Client} $|$ \emph{C\#, .NET Core, Razor Pages, Azure, GitHub Actions}}{July 2024 -- Present}
           \resumeItemListStart
-            \resumeItem{Created a minimalistic Hacker News client using Steph Ango's Flexoki theme.}
+            \resumeItem{Created a simple Hacker News client using Steph Ango's Flexoki theme.}
           \resumeItemListEnd
-      % \resumeProjectHeading
-      %     {\textbf{Coco} $|$ \emph{JavaScript, Tera, Sass, HTML, GitHub Actions}}{June 2024 -- Present}
-      %     \resumeItemListStart
-      %       \resumeItem{Created a minimalistic Zola theme for my personal website, now available for free.}
-      %     \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{Coco} $|$ \emph{JavaScript, SCSS, HTML, GitHub Actions}}{June 2024 -- Present}
+          \resumeItemListStart
+            \resumeItem{Created a minimalistic theme for the static site generator Zola.}
+          \resumeItemListEnd
       % \resumeProjectHeading
       %     {\textbf{Camila} $|$ \emph{C++, OpenGL, GLFW, glad, glm, assimp}}{May 2024 -- Present}
       %     \resumeItemListStart
       %       \resumeItem{OpenGL 3D graphics engine with PBR lighting and asset loading.}
       %     \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{Kai} $|$ \emph{Typescript, Vite, Jest, Fastify }}{Nov 2023 -- Present}
-          \resumeItemListStart
-            \resumeItem{Built a WebSocket relay server that bridges the communication between clients for use in listen-server architectures.}
-          \resumeItemListEnd
+      % \resumeProjectHeading
+      %     {\textbf{Kai} $|$ \emph{Typescript, Vite, Jest, Fastify }}{Nov 2023 -- Present}
+      %     \resumeItemListStart
+      %       \resumeItem{Built a WebSocket relay server that bridges client communication in listen-server architectures.}
+      %     \resumeItemListEnd
     \resumeSubHeadingListEnd
-
-%-----------SKILLS-----------
-\begin{minipage}[t]{.78\textwidth}
-  \section{Skills}
-  \begin{itemize}[leftmargin=0.15in, label={}]
-      \small{\item{
-      \textbf{Languages}{: Typescript, C\#, C++, CSS/SCSS/HTML, SQL.} \\
-      \textbf{Frameworks and libraries}{: React, Razor Pages, Express.js.} \\
-      \textbf{Infrastructure}{: AWS (EC2, Lambda, RDS, CloudWatch), Azure (App Service) Redis, Terraform.} \\
-      \textbf{DevOps}{: Jenkins, CircleCI, GitHub Actions, Docker.} \\
-      \textbf{Others}{: Node.js, ASP.NET Core, Typeorm, Git, Tailwind, Webpack, Vite.} \\
-      % \textbf{Languages}{: Typescript, JavaScript, SQL, HTML, CSS.} \\
-      % \textbf{Languages}{: Typescript, C++, SQL, Postgres, JavaScript, HTML, CSS.} \\
-      % \textbf{Frameworks}{: React, React Native, Jest, Express.js, Fastify.} \\
-      % \textbf{DevOps}{: AWS, Serverless, Terraform, Firebase, CircleCI, GitHub Actions.} \\
-      % \textbf{Others}{: Node.js, Redis, Docker, Typeorm, Tailwind, Webpack, Vite.} \\
-      % \textbf{Libraries \& Others}{: Node.js, OpenGL, Dear ImGui, Ant Design, Tailwind, Redis, Docker.} \\
-      % \textbf{Tools}{: Redis, Docker, Typeorm, Git, Tailwind, Webpack, Vite.} \\
-      }}
-  \end{itemize}
-\end{minipage}\hspace{.02\textwidth}%
-%-----------Languages-----------
-\begin{minipage}[t]{.20\textwidth}
-  \section{Languages}
-  \begin{itemize}[leftmargin=0.0in, label={}]
-      \small{\item{
-      \textbf{English}{: Fluent} \\
-      \textbf{Spanish}{: Fluent} \\
-      }}
-  \end{itemize}
-\end{minipage}\vspace{-10pt}
 
 %-----------PROJECTS-----------
 % \section{Volunteering}
